deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbinger
  labels:
    app: harbinger
